ana renomeando site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Site</h3>
+    <h3>Site Aleatório</h3>
     <tr>
         <td>um</td>
         <td>dois</td>
